--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -385,33 +385,9 @@ jobs:
           GENERIC_REPO="${{ vars.PROJECT_KEY }}-${SERVICE_NAME}-internal-generic-nonprod-local"
           
           # Calculate worker image version
-          echo "🔎 Resolving next Image SemVer for docker:$DOCKER_REPO/$WORKER_PACKAGE_NAME (SemVer sort)"
-          WORKER_RESP=$(curl -sS -L -X GET "${{ vars.JFROG_URL }}/api/docker/$DOCKER_REPO/v2/$WORKER_PACKAGE_NAME/tags/list" \
-            -H "Authorization: Bearer $JF_ACCESS_TOKEN" \
-            -H "Accept: application/json" 2>/dev/null || echo '{"error":"curl_failed"}')
-          if ! echo "$WORKER_RESP" | jq -e . >/dev/null 2>&1; then
-            WORKER_LATEST=""
-          else
-            WORKER_LATEST=$(echo "$WORKER_RESP" | jq -r '[.tags[]? | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))] | sort_by([ (split(".")[0]|tonumber),(split(".")[1]|tonumber),(split(".")[2]|tonumber) ]) | (last // empty)')
-          fi
-          if [[ -n "${WORKER_LATEST}" ]]; then
-            IFS='.' read -r W_MAJ W_MIN W_PAT <<<"${WORKER_LATEST}"; W_PAT=$((W_PAT+1)); WORKER_IMAGE_TAG="${W_MAJ}.${W_MIN}.${W_PAT}"
-          else
-            # Use seed version from local version map for worker
-            WORKER_SEED=$(awk -v app_key="$APPLICATION_KEY" '
-              BEGIN { found_app=0; in_packages=0; worker_found=0 }
-              /^  - key:/ { found_app = ($3 == app_key); in_packages=0; worker_found=0; next }
-              found_app && /^    packages:/ { in_packages=1; worker_found=0; next }
-              found_app && in_packages && /^      - type:[ \t]*docker/ { worker_found=1; next }
-              found_app && in_packages && worker_found && /^[[:space:]]+name:[ \t]*recommendations-worker/ { worker_found=2; next }
-              found_app && in_packages && worker_found == 2 && /^[[:space:]]+seed:[ \t]*/ {
-                sub(/^[ \t]+seed:[ \t]*/, "");
-                print; exit
-              }
-            ' "./config/version-map.yaml" 2>/dev/null || echo "")
-            WORKER_IMAGE_TAG="$WORKER_SEED"
-            echo "✅ Using worker seed version from version-map.yaml: $WORKER_IMAGE_TAG"
-          fi
+          # Use the same IMAGE_TAG for worker image (consistent with unified approach)
+          WORKER_IMAGE_TAG="$IMAGE_TAG"
+          echo "✅ Using unified IMAGE_TAG for worker: $WORKER_IMAGE_TAG"
 
           # Set image names and tags
           API_PACKAGE_NAME="${SERVICE_NAME}"
