--- a/.github/workflows/ci-shared.yml
+++ b/.github/workflows/ci-shared.yml
@@ -65,6 +65,9 @@ jobs:
   build:
     name: "Build & Test"
     needs: analyze-commit
+    permissions:
+      contents: read
+      id-token: write
     uses: ./.github/workflows/shared-build.yml
     with:
       service-name: "recommendations"
