--- a/.github/workflows/shared-build.yml
+++ b/.github/workflows/shared-build.yml
@@ -66,14 +66,41 @@ jobs:
         with:
           python-version: ${{ inputs.python-version }}
       
+      - name: "🔨 Setup Build Variables (Early)"
+        id: early-build-vars
+        run: |
+          # Generate build variables early for JFrog CLI setup
+          BUILD_NAME="${{ inputs.service-name }}_CI_build-${{ inputs.service-name }}"
+          BUILD_NUMBER="${GITHUB_RUN_NUMBER}-1"
+          echo "BUILD_NAME=$BUILD_NAME" >> $GITHUB_ENV
+          echo "BUILD_NUMBER=$BUILD_NUMBER" >> $GITHUB_ENV
+          echo "build_name=$BUILD_NAME" >> $GITHUB_OUTPUT
+          echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
+          echo "SERVICE_NAME=${{ inputs.service-name }}" >> $GITHUB_ENV
+          echo "APPLICATION_KEY=${{ vars.PROJECT_KEY }}-${{ inputs.service-name }}" >> $GITHUB_ENV
+      
       - name: "🔧 JFrog CLI Setup with OIDC (Pattern 1)"
         id: jfrog-cli-setup
         uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
-        env:
-          JF_URL: ${{ vars.JFROG_URL }}
         with:
+          version: latest
           oidc-provider-name: ${{ vars.OIDC_PROVIDER_NAME }}
           oidc-audience: ${{ vars.OIDC_AUDIENCE }}
+          disable-job-summary: true
+          disable-auto-build-publish: true
+          disable-auto-evidence-collection: false
+        env:
+          JF_URL: ${{ vars.JFROG_URL }}
+          JF_PROJECT: ${{ vars.PROJECT_KEY }}
+          JFROG_CLI_BUILD_NAME: ${{ env.BUILD_NAME }}
+          JFROG_CLI_BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
+          JFROG_CLI_BUILD_PROJECT: ${{ vars.PROJECT_KEY }}
+          
+      - name: "✅ Verify JFrog Authentication"
+        run: |
+          echo "🔐 Verifying JFrog CLI authentication and connectivity..."
+          jf rt ping
+          echo "✅ JFrog authentication successful"
       
       - name: "🔐 Manual OIDC Token Minting (Pattern 2)"
         id: manual-oidc
