--- a/.github/workflows/shared-build.yml
+++ b/.github/workflows/shared-build.yml
@@ -172,6 +172,24 @@ jobs:
           if [[ "$PING_RESPONSE" == "OK" ]]; then
             echo "✅ Manual OIDC token exchange successful and validated"
             echo "manual_token_available=true" >> $GITHUB_OUTPUT
+            
+            # CRITICAL: Docker login using the access token (required workaround)
+            echo "🐳 Performing Docker login with OIDC token..."
+            # Derive username from token payload (sub/username), fallback to oauth2_access_token
+            b64pad() { local l=${#1}; local m=$((l % 4)); if [ $m -eq 2 ]; then echo "$1=="; elif [ $m -eq 3 ]; then echo "$1="; else echo "$1"; fi; }
+            PAY=$(echo "$JF_OIDC_TOKEN" | cut -d. -f2 || true)
+            PAY_PAD=$(b64pad "$PAY")
+            CLAIMS=$(echo "$PAY_PAD" | tr '_-' '/+' | base64 -d 2>/dev/null || true)
+            DOCKER_USER=$(echo "$CLAIMS" | jq -r '.username // .sub // .subject // empty' 2>/dev/null || true)
+            # If sub is in the form jfac@.../users/<username>, extract the trailing <username>
+            if [[ "$DOCKER_USER" == *"/users/"* ]]; then
+              DOCKER_USER=${DOCKER_USER##*/users/}
+            fi
+            if [[ -z "$DOCKER_USER" || "$DOCKER_USER" == "null" ]]; then DOCKER_USER="oauth2_access_token"; fi
+            echo "🔑 Using docker username: $DOCKER_USER"
+            REGISTRY_URL="${{ vars.DOCKER_REGISTRY }}"
+            echo "$JF_OIDC_TOKEN" | docker login "$REGISTRY_URL" -u "$DOCKER_USER" --password-stdin
+            echo "✅ Docker registry authenticated with OIDC token"
           else
             echo "⚠️ Manual token obtained but validation failed"
             echo "manual_token_available=false" >> $GITHUB_OUTPUT
