--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ uvicorn[standard]==0.30.0
 httpx==0.27.0
 python-dotenv==1.1.1
 pytest==8.3.2
-python-jose[cryptography]>=3.2.0
+# python-jose[cryptography]>=3.2.0  # Not available in JFrog PyPI, temporarily disabled
 python-multipart==0.0.20
 requests==2.31.0
