--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,15 +189,9 @@ jobs:
             --packages "recommendations,recommendations-worker,recommendation-config,resources" \
             --verbose)
           
-          # Debug: Show the raw semver output
-          echo "🔍 Raw semver output:"
-          echo "$SEMVER_OUTPUT"
-          echo "🔍 End of raw output"
-          
           # Extract APP_VERSION and individual package versions from the Python script's JSON output
           # NOTE: Build number uses GitHub Actions convention (BUILD_NUMBER), not Python semver output
           JSON_LINE=$(echo "$SEMVER_OUTPUT" | grep '{"application_key"')
-          echo "🔍 Extracted JSON line: $JSON_LINE"
           APP_VERSION=$(echo "$JSON_LINE" | jq -r '.app_version')
           if [[ -z "$APP_VERSION" || "$APP_VERSION" == "null" ]]; then
             echo "❌ Failed to extract APP_VERSION from semver output" >&2
@@ -575,6 +569,65 @@ jobs:
           attach_build_evidence
           
           echo "✅ Build evidence attached: fossa-license-scan, sonar-quality-gate"
+
+      - name: "[DEBUG] Direct Build Evidence Test"
+        env:
+          EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
+        run: |
+          echo "🔬 DEBUG: Testing direct JFrog CLI evidence commands"
+          echo "📋 This is a debug step to isolate OIDC vs Library issues"
+          
+          # Create a simple debug evidence file
+          cat > debug-fossa-test.json << 'EOF'
+          {
+            "predicateType": "https://fossa.com/evidence/license-scan/v2.1",
+            "predicate": {
+              "scanId": "debug-test-12345",
+              "status": "PASSED",
+              "description": "DEBUG: Direct CLI test for FOSSA license scan",
+              "timestamp": "$(date -u +%Y-%m-%dT%H:%M:%SZ)",
+              "tool": {
+                "name": "FOSSA",
+                "version": "3.9.0"
+              }
+            }
+          }
+          EOF
+          
+          # Create debug markdown
+          cat > debug-fossa-test.md << 'EOF'
+          # DEBUG: FOSSA License Scan Test
+          
+          This is a DEBUG evidence attachment to test direct CLI commands.
+          This evidence is attached directly via JFrog CLI without using the evidence library.
+          
+          **Purpose**: Isolate whether the issue is with OIDC permissions or library code.
+          EOF
+          
+          echo "📋 Debug evidence files created"
+          echo "🔍 Current environment:"
+          echo "  BUILD_NAME: $BUILD_NAME"
+          echo "  BUILD_NUMBER: $BUILD_NUMBER"
+          echo "  PROJECT_KEY: ${{ vars.PROJECT_KEY }}"
+          
+          # Direct JFrog CLI command - no library
+          echo "🚀 Executing direct jf evd create-evidence command..."
+          jf evd create-evidence \
+            --predicate "debug-fossa-test.json" \
+            --markdown "debug-fossa-test.md" \
+            --predicate-type "https://fossa.com/evidence/license-scan/v2.1" \
+            --build-name "$BUILD_NAME" \
+            --build-number "$BUILD_NUMBER" \
+            --project "${{ vars.PROJECT_KEY }}" \
+            --provider-id github-actions \
+            --url "${{ vars.JFROG_URL }}" \
+            --key "$EVIDENCE_PRIVATE_KEY" \
+            --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || {
+            echo "❌ DEBUG: Direct CLI command failed with exit code $?"
+            echo "🔍 This indicates the issue is with OIDC permissions, not library code"
+          }
+          
+          echo "✅ DEBUG: Direct evidence test completed"
 
   create-promote:
     name: "Create Application Version & Promote (Conditional)"
