--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -374,8 +374,8 @@ jobs:
           # Source the evidence library
           source bookverse-infra/libraries/bookverse-devops/scripts/evidence-lib.sh
           
-          # Set package-specific environment variables
-          export PACKAGE_NAME="recommendation-config"
+          # Set package-specific environment variables  
+          export PACKAGE_NAME="recommendations-config"
           export PACKAGE_VERSION="$CONFIG_VERSION"
           
           # Attach generic package evidence
@@ -446,6 +446,45 @@ jobs:
           else
             echo "  → Docker: ${{ vars.PROJECT_KEY }}-$SERVICE_NAME-internal-docker-nonprod-local"
           fi
+          
+          # Test different package configurations
+          echo "🧪 Testing different package evidence approaches:"
+          
+          echo "🔬 Test 1: Current approach (recommendations-config + version)"
+          jf evd create-evidence \
+            --predicate "debug-config-evidence.json" \
+            --predicate-type "https://in-toto.io/Statement/v0.1" \
+            --package-name "recommendations-config" \
+            --package-version "$CONFIG_VERSION" \
+            --package-repo-name "bookverse-recommendations-internal-generic-nonprod-local" \
+            --project "bookverse" \
+            --provider-id github-actions \
+            --key "${EVIDENCE_PRIVATE_KEY:-}" \
+            --key-alias "${EVIDENCE_KEY_ALIAS:-bookverse_evidence_key}" || echo "❌ Test 1 failed"
+          
+          echo "🔬 Test 2: Full artifact name as package name"
+          jf evd create-evidence \
+            --predicate "debug-config-evidence.json" \
+            --predicate-type "https://in-toto.io/Statement/v0.1" \
+            --package-name "recommendations-config-$CONFIG_VERSION.tar.gz" \
+            --package-version "$CONFIG_VERSION" \
+            --package-repo-name "bookverse-recommendations-internal-generic-nonprod-local" \
+            --project "bookverse" \
+            --provider-id github-actions \
+            --key "${EVIDENCE_PRIVATE_KEY:-}" \
+            --key-alias "${EVIDENCE_KEY_ALIAS:-bookverse_evidence_key}" || echo "❌ Test 2 failed"
+          
+          echo "🔬 Test 3: Different package name format"
+          jf evd create-evidence \
+            --predicate "debug-config-evidence.json" \
+            --predicate-type "https://in-toto.io/Statement/v0.1" \
+            --package-name "recommendation-config" \
+            --package-version "$CONFIG_VERSION" \
+            --package-repo-name "bookverse-recommendations-internal-generic-nonprod-local" \
+            --project "bookverse" \
+            --provider-id github-actions \
+            --key "${EVIDENCE_PRIVATE_KEY:-}" \
+            --key-alias "${EVIDENCE_KEY_ALIAS:-bookverse_evidence_key}" || echo "❌ Test 3 failed"
           
           echo "✅ DEBUG: Package evidence investigation completed"
 
